@@ -7,6 +7,9 @@ server:
 - fixed issue9: caching of packages where upstream provides no
   last-modified header now works.
 
+- fixed issue8: only http/https archives are allowed and other
+  schemes (such as ftp) are silently skipped
+
 0.9.2 (compared to 0.9.1)
 ----------------------------
 
